Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignObjectBoolObj.quorum
Boolean b
b:SetValue(true)
Object o = cast(Object, b)
Boolean a = cast(Boolean, o)
output a:GetValue()