Quorum3/Library/Tests/TypeChecker/Fail/ExpAssignTextBoolObj.quorum
Boolean b
b:SetValue(true)
text t = cast(text, b)